src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@wfsAN-wmAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nwant maximized: AU\nconfig:\nwindow-rule {\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
